--- a/index.html
+++ b/index.html
@@ -281,8 +281,8 @@
     </p>
     <ul>
       <li>Email: <a href="mailto:sisebi.info@gmail.com">sisebi.info@gmail.com</a></li>
-      <li>Contact No:+91 7738980548</a></li>
-      <li>Registered office address: Tender Dry Products, Plot 114, New sector 50, Seawoods west, Navi Mumbai, Maharashtra, India, 400706</a></li> 
+      <li>Whatsapp No:+91 7869932372</a></li>
+      <!--<li>Registered office address: Tender Dry Products, Plot 114, New sector 50, Seawoods west, Navi Mumbai, Maharashtra, India, 400706</a></li>--> 
     </ul>
   </div>
 </section>
@@ -316,7 +316,7 @@
 <a href="contact.html" target="_blank" rel="noopener noreferrer">Contact Us</a>
   </p>
   <p>&copy; 2025 SISEBI. All rights reserved.</p>
-    Developed and maintained by <b>Tender Dry Products</b>
+    Developed and maintained by <b>SISEBI research</b>
 </div>
 
 <!-- Report Modal -->
@@ -875,3 +875,4 @@ function toggleUserPanel() {
 </script>
 </body>
 </html>
+
