--- a/contact.html
+++ b/contact.html
@@ -13,9 +13,10 @@
   <h1>Contact Us</h1>
   <p>If you have any questions, please feel free to contact us:</p>
   <ul>
-    <li>Email: <a href="mailto:info.sisebi@gmail.com">info.sisebi@gmail.com</a></li>
-    <li>Phone: +91-7738980548</li>
-    <li>Location: Navi Mumbai, India</li>
+    <li>Email: <a href="mailto:sisebi.info@gmail.com">sisebi.info@gmail.com</a></li>
+    <li>Whatsapp: +91-7869932372</li>
+    <!--<li>Location: Navi Mumbai, India</li>-->
   </ul>
 </body>
 </html>
+
