--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
   </div>
 </div>
 
-<h1>HS Code Data Search</h1>
+<!--<h1>HS Code Data Search</h1>
 <div id="description">
   Get current and historical Export & Import data of India for any product (HSN wise).
 </div>
@@ -266,8 +266,8 @@
 <button onclick="searchHSCode()">Search</button>
 
 <div id="result"></div>
-
-<h2 style="margin-top:40px;">Complete Data</h2>
+-->
+<h2 style="margin-top:40px;">India Import Export Values, Prices and their last 4 year growth for all commodities</h2>
 <div id="loader" style="display:flex;align-items:center;justify-content:center;height:10vh;font-size:20px;background: rgba(255, 255, 255, 0.8);backdrop-filter: blur(4px);">
   ⏳ Loading data, please wait...
 </div>
@@ -875,4 +875,5 @@ function toggleUserPanel() {
 </script>
 </body>
 </html>
+
 
