--- a/index.html
+++ b/index.html
@@ -229,10 +229,9 @@
 <div id="useModal" class="modal">
   <div class="modal-content">
     <span class="close" onclick="closeModal('useModal')">&times;</span>
-    <h3>📌 How to Use</h3>
+    <h3><br><br><br>📌 How to Use</h3>
     <p>
-      ✅ Enter an <b>HSN code</b> in the search box of *HS Code Data Search* to view Import/ Export current and historical view for any particular commodity.</br><br>
-      ✅ In the *Complete Data* table section, <b>current & historical Import/ Export values, prices and growth rates</b> are available for all commodities</br><br>
+     ✅ In the table on the website, <b>current & historical Import/ Export values, prices and growth rates</b> are available for all commodities</br><br>
      ✅ There are also <b>filters</b> and <b>sortings</b> available in each columns to easily find out specific products as per your expectation from huge dataset </br><br>
      ✅ Click <b>Download</b> button which is there at the start of every row to request for the complete detailed report which includes <br><br>
            <b>Executive summary, country wise/ year wise Import/ Export data and analysis</b> to thoroughly guide you in prefeasibilty evaluation and decision makings </br><br>
@@ -875,5 +874,6 @@ function toggleUserPanel() {
 </script>
 </body>
 </html>
+
 
 
