--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 -->
 <h2 style="margin-top:40px;">India Import Export Values, Prices and their last 4 year growth for all commodities</h2>
 <div id="loader" style="display:flex;align-items:center;justify-content:center;height:10vh;font-size:20px;background: rgba(255, 255, 255, 0.8);backdrop-filter: blur(4px);">
-  ⏳ Loading data, please wait...
+  ⏳ Loading data, it might take one minute, please wait..
 </div>
 <table id="csvTable" class="display" style="width:95%"></table>
 <!-- Contact Section -->
@@ -874,6 +874,7 @@ function toggleUserPanel() {
 </script>
 </body>
 </html>
+
 
 
 
