--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
   <div id="faqModal" class="modal">
   <div class="modal-content">
     <span class="close" onclick="closeModal('aboutModal')">&times;</span>
-    <h3>Frequently Asked Questions (FAQs)</h3>
+    <h3><br><br><br>Frequently Asked Questions (FAQs)</h3>
         <div class="faq-container">
 
       <h4>1. What is SISEBI?</h4>
@@ -311,7 +311,7 @@
 
       <h4>10. Why choose SISEBI over traditional consultants?</h4>
       <p>Conventional market studies cost lakhs and take weeks to prepare. SISEBI gives you instant, data-driven insights at minimal cost, so you can act faster and with more confidence.</p>
-
+     <br><br><br>
     </div>
   </div>
 </div>
@@ -942,6 +942,7 @@ function toggleUserPanel() {
 </script>
 </body>
 </html>
+
 
 
 
