--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 </div>
   <div id="faqModal" class="modal">
   <div class="modal-content">
-    <span class="close" onclick="closeModal('aboutModal')">&times;</span>
+    <span class="close" onclick="closeModal('faqModal')">&times;</span>
     <h3><br><br><br>Frequently Asked Questions (FAQs)</h3>
         <div class="faq-container">
 
@@ -942,6 +942,7 @@ function toggleUserPanel() {
 </script>
 </body>
 </html>
+
 
 
 
