--- a/index.html
+++ b/index.html
@@ -2,7 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>HS Code Data Search</title>
+  <title>SISEBI: Import Substitution & Export Business Intelligence for India</title>
+  <meta name="description" content="Find best import substitution & export opportunities in India. SISEBI is AI-led trade intelligence platform with 8+ years of import & export data on all 12,000+ commodities with all countries.">
+  <meta name="keywords" content="import substitution India, export opportunities India, trade intelligence platform, import export data, commodity reports India, HSN codes, ICIS, IHS, S&P, CCMA, Make in India opportunities">
+  <meta property="og:title" content="SISEBI – Import Substitution & Export Business Intelligence India">
+  <meta property="og:description" content="AI-led trade intelligence with 8+ years of India’s import-export data. Find best import substitution & export opportunities.">
+  <meta property="og:url" content="https://sisebi.netlify.app/">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="https://sisebi.netlify.app/logo.png"> <!-- replace with your site logo -->
   <link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.min.css">
   <style>
     body {
@@ -942,6 +949,7 @@ function toggleUserPanel() {
 </script>
 </body>
 </html>
+
 
 
 
