--- a/index.html
+++ b/index.html
@@ -351,17 +351,16 @@
   <h2 style="margin-bottom:15px;">📩 Get Weekly Exclusive Business Opportunities</h2>
   <p style="margin-bottom:20px;">Sign up with your email to receive curated import–export insights and India’s hottest trade opportunities every week.</p>
 
-  <form name="newsletter" method="POST" data-netlify="true" style="max-width:400px; margin:0 auto;">
-    <input type="hidden" name="form-name" value="newsletter">
-    
-    <input type="email" name="email" placeholder="Enter your email address" required 
-           style="width:100%; padding:12px; border:1px solid #ccc; border-radius:6px; margin-bottom:15px;">
-    
-    <button type="submit" 
-            style="background:#0077cc; color:#fff; padding:12px 20px; border:none; border-radius:6px; cursor:pointer; width:100%;">
-      Subscribe
-    </button>
-  </form>
+  <form name="newsletter" method="POST" data-netlify="true" action="/thank-you">
+  <input type="hidden" name="form-name" value="newsletter">
+  <input type="email" name="email" placeholder="Enter your email address" required 
+         style="width:100%; padding:12px; border:1px solid #ccc; border-radius:6px; margin-bottom:15px;">
+  <button type="submit" 
+          style="background:#0077cc; color:#fff; padding:12px 20px; border:none; border-radius:6px; cursor:pointer; width:100%;">
+    Subscribe
+  </button>
+</form>
+
 
   <p style="margin-top:15px; font-size:14px; color:#555;">We respect your privacy. Unsubscribe anytime.</p>
 </section>
@@ -967,8 +966,12 @@ function toggleUserPanel() {
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
+  <form name="newsletter" netlify netlify-honeypot="bot-field" hidden>
+  <input type="email" name="email">
+</form>
 </body>
 </html>
+
 
 
 
