--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
   <h2 style="margin-bottom:15px;">📩 Get Weekly Exclusive Business Opportunities</h2>
   <p style="margin-bottom:20px;">Sign up with your email to receive curated import–export insights and India’s hottest trade opportunities every week.</p>
 
-  <form name="newsletter" <!--method="POST" data-netlify="true"--> action="/thank-you" netlify>
+  <form name="newsletter" action="/thank-you" netlify>
   <!--<input type="hidden" name="form-name" value="newsletter">-->
   <input type="email" name="email" placeholder="Enter your email address" required 
          style="width:100%; padding:12px; border:1px solid #ccc; border-radius:6px; margin-bottom:15px;">
@@ -971,6 +971,7 @@ function toggleUserPanel() {
 </form>
 </body>
 </html>
+
 
 
 
