--- a/index.html
+++ b/index.html
@@ -608,6 +608,9 @@ function buildDataTable() {
     pageLength: 25,
     orderCellsTop: true,
     fixedHeader: true
+      columnDefs: [
+    { targets: [7, 12], type: 'num' }  // replace with zero-based indices of your two columns
+  ]
   });
 
   // Filters
@@ -1013,6 +1016,7 @@ function toggleUserPanel() {
 </div>
 </body>
 </html>
+
 
 
 
