--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@ function isNumericColumn(index) {
     const cell = data[i][index];  // current cell value
 
     if (cell !== undefined && cell !== null && cell.toString().trim() !== "") {
-      const val = parseFloat(cell.toString().replace(/,/g, ''));
+      const val = parseFloat(cell.toString().replace(/[\s,%\u00A0\u202F]/g, '').replace(/[^0-9.\-eE]/g, ''));
       if (!isNaN(val)) return true;
     }
   }
@@ -634,13 +634,17 @@ function buildDataTable() {
       });
 
      $.fn.dataTable.ext.search.push(function(settings, dataRow) {
-    if (settings.nTable !== table.table().node()) return true; // only for this table
+    if (settings.nTable !== table.table().node()) return true;
 
     const valRaw = dataRow[column.index()];
     if (!valRaw) return false;
 
-    // Remove commas, spaces, and any invisible unicode chars
-    const valClean = valRaw.replace(/[^0-9.\-eE]/g, '');
+    // Remove commas, spaces, %, and any invisible unicode chars
+    const valClean = valRaw
+        .toString()
+        .replace(/[\s,%\u00A0\u202F]/g, '')   // spaces, commas, percent, non-breaking spaces
+        .replace(/[^0-9.\-eE]/g, '');        // keep digits, dot, minus, exponent
+
     const val = parseFloat(valClean);
     if (isNaN(val)) return false;
 
@@ -1023,6 +1027,7 @@ function toggleUserPanel() {
 </div>
 </body>
 </html>
+
 
 
 
