--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@ function isNumericColumn(index) {
     const cell = data[i][index];  // current cell value
 
     if (cell !== undefined && cell !== null && cell.toString().trim() !== "") {
-      const val = parseFloat(cell.toString().replace(/[\s,%\u00A0\u202F]/g, '').replace(/[^0-9.\-eE]/g, ''));
+      const val = parseFloat(cell.toString().replace(/,/g, ''));
       if (!isNaN(val)) return true;
     }
   }
@@ -615,19 +615,13 @@ function buildDataTable() {
   table = $("#csvTable").DataTable({
     pageLength: 25,
     orderCellsTop: true,
-    fixedHeader: true,
-      columnDefs: [
-    { targets: [8, 13], type: 'num' }  // replace with zero-based indices of your two columns
-  ]
+    fixedHeader: true
   });
 
   // Filters
   table.columns().every(function() {
     const column = this;
-    const headerCell = $(column.header()).closest("thead").find("tr.filter-row th").filter(function() {
-      return $(this).index() === $(column.header()).index();
-    });
-
+     const headerCell = $(column.header()).closest("thead").find("tr.filter-row th").eq(column.index());
     if (column.index() === 0) return; // Skip download column
     if (isNumericColumn(column.index())) {
       const minInput = headerCell.find('input').eq(0);
@@ -641,29 +635,14 @@ function buildDataTable() {
         }, 50); // small delay so spinner actually appears
       });
 
-     $.fn.dataTable.ext.search.push(function(settings, dataRow) {
-    if (settings.nTable !== table.table().node()) return true;
-
-    const valRaw = dataRow[column.index()];
-    if (!valRaw) return false;
-
-    // Remove commas, spaces, %, and any invisible unicode chars
-    const valClean = valRaw
-        .toString()
-        .replace(/[\s,%\u00A0\u202F]/g, '')   // spaces, commas, percent, non-breaking spaces
-        .replace(/[^0-9.\-eE]/g, '');        // keep digits, dot, minus, exponent
-
-    const val = parseFloat(valClean);
-    if (isNaN(val)) return false;
-
-    const min = parseFloat(minInput.val()) || null;
-    const max = parseFloat(maxInput.val()) || null;
-
-    if ((min !== null && val < min) || (max !== null && val > max)) return false;
-    return true;
-});
-
-
+       $.fn.dataTable.ext.search.push(function(settings, dataRow) {
+        if (settings.nTable !== table.table().node()) return true; // only for this table
+        const val = parseFloat(dataRow[column.index()].replace(/,/g, '')) || 0;
+        const min = parseFloat(minInput.val()) || null;
+        const max = parseFloat(maxInput.val()) || null;
+        if ((min !== null && val < min) || (max !== null && val > max)) return false;
+        return true;
+      });
     } else {
       let select = headerCell.find("select");
       column.data().unique().sort().each(function(d) {
@@ -1035,6 +1014,7 @@ function toggleUserPanel() {
 </div>
 </body>
 </html>
+
 
 
 
