--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
     👤 User Panel
   </button>
   <button onclick="openBlog()" 
-        style="padding:10px 20px; background:#ff9800; color:white; border:none; border-radius:6px; cursor:pointer;">
+        style="padding:10px 20px; background:#ba0645; color:white; border:none; border-radius:6px; cursor:pointer;">
   📰 Blog
 </button>
 </div>
@@ -996,7 +996,7 @@ function toggleUserPanel() {
   }
 }
 function openBlog() {
-    window.location.href = "blog.html";  // Redirects to blog.html
+   window.open("blog.html", "_blank");
   }
 </script>
 
@@ -1020,6 +1020,7 @@ function openBlog() {
 </div>
 </body>
 </html>
+
 
 
 
