--- a/blog.html
+++ b/blog.html
@@ -65,6 +65,9 @@
     <h1>SISEBI Insights</h1>
     <p>Latest analysis on India’s trade, import substitution & export opportunities</p>
   </header>
+  <section id="subscribe" class="subscribe-section" style="padding:40px; text-align:center; background:#f9f9f9;">
+  <h2 style="margin-bottom:15px;">📩 Get Weekly Exclusive Business Opportunities</h2>
+  <p style="margin-bottom:20px;">Sign up with your email to receive curated import–export insights and India’s hottest trade opportunities every week.</p>
   <form name="newsletter" action="/thank-you" netlify style="max-width:400px; margin:0 auto;">
   <!--<input type="hidden" name="form-name" value="newsletter">-->
   <input type="email" name="email" placeholder="Enter your email address" required 
