--- a/blog.html
+++ b/blog.html
@@ -108,7 +108,7 @@
   </button>
       <button onclick="openhomepage()" 
         style="padding:10px 20px; background:#ba0645; color:white; border:none; border-radius:6px; cursor:pointer;">
-  📰 Blog
+  📰 Homepage
 </button>
 </div>
   <div id="aboutModal" class="modal">
