--- a/index.html
+++ b/index.html
@@ -1018,8 +1018,22 @@ function openBlog() {
   <div id="spinnerOverlay">
   <div class="loader"></div>
 </div>
+   <script>
+   
+document.addEventListener('contextmenu', event => event.preventDefault());
+document.onkeydown = function(e) {
+  if (e.keyCode == 123 || // F12
+      (e.ctrlKey && e.shiftKey && e.keyCode == 'I'.charCodeAt(0)) || // Ctrl+Shift+I
+      (e.ctrlKey && e.shiftKey && e.keyCode == 'J'.charCodeAt(0)) || // Ctrl+Shift+J
+      (e.ctrlKey && e.keyCode == 'U'.charCodeAt(0))) { // Ctrl+U
+    return false;
+  }
+};
+
+</script>
 </body>
 </html>
+
 
 
 
