--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
     </p>
     <ul>
       <li>Email: <a href="mailto:sisebi.info@gmail.com">sisebi.info@gmail.com</a></li>
-      <li>Whatsapp No:+91 7869932372</a></li>
+     <!-- <li>Whatsapp No:+91 7869932372</a></li>-->
       <!--<li>Registered office address: Tender Dry Products, Plot 114, New sector 50, Seawoods west, Navi Mumbai, Maharashtra, India, 400706</a></li>--> 
     </ul>
   </div>
@@ -1033,6 +1033,7 @@ document.onkeydown = function(e) {
 </script>
 </body>
 </html>
+
 
 
 
