Update contact.html to remove personal details
Removed WhatsApp and location information from contact page.

--- a/contact.html
+++ b/contact.html
@@ -14,9 +14,10 @@
   <p>If you have any questions, please feel free to contact us:</p>
   <ul>
     <li>Email: <a href="mailto:sisebi.info@gmail.com">sisebi.info@gmail.com</a></li>
-    <li>Whatsapp: +91-7869932372</li>
+    <!--<li>Whatsapp: +91-7869932372</li>-->
     <!--<li>Location: Navi Mumbai, India</li>-->
   </ul>
 </body>
 </html>
+
 
